--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-django
-psycopg2-binary
-djangorestframework
-django-filter
-dj-rest-auth
-django-cors-headers
-drf-yasg
-django-private-storage
+asgiref==3.4.1
+Django==3.2.9
+pytz==2021.3
+sqlparse==0.4.2
